--- a/app/backend/requirements.txt
+++ b/app/backend/requirements.txt
@@ -445,3 +445,5 @@ zipp==3.17.0
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
+
+azure.ai.formrecognizer
